RESOLVED FIXED223752
Some calls in AuthenticatorPresenterCoordinator::selectAssertionResponse are not yet available for mac
https://bugs.webkit.org/show_bug.cgi?id=223752
Summary Some calls in AuthenticatorPresenterCoordinator::selectAssertionResponse are ...
Kate Cheney
Reported 2021-03-25 10:33:08 PDT
Some calls in AuthenticatorPresenterCoordinator::selectAssertionResponse are not yet available for mac
Attachments
Patch (1.80 KB, patch)
2021-03-25 10:33 PDT, Kate Cheney
no flags
Patch (1.97 KB, patch)
2021-03-25 10:38 PDT, Kate Cheney
no flags
Patch (1.21 KB, patch)
2021-03-25 11:08 PDT, Kate Cheney
ews-feeder: commit-queue-
Kate Cheney
Comment 1 2021-03-25 10:33:19 PDT
Kate Cheney
Comment 2 2021-03-25 10:33:22 PDT
Chris Dumez
Comment 3 2021-03-25 10:33:48 PDT
Comment on attachment 424256 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=424256&action=review > Source/WebKit/ChangeLog:3 > + Need a short description (OOPS!). OOPS
Kate Cheney
Comment 4 2021-03-25 10:38:16 PDT
Kate Cheney
Comment 5 2021-03-25 10:39:24 PDT
(In reply to Chris Dumez from comment #3) > Comment on attachment 424256 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=424256&action=review > > > Source/WebKit/ChangeLog:3 > > + Need a short description (OOPS!). > > OOPS !
Jiewen Tan
Comment 6 2021-03-25 11:02:38 PDT
Comment on attachment 424257 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=424257&action=review > Source/WebKit/UIProcess/WebAuthentication/Cocoa/AuthenticatorPresenterCoordinator.mm:43 > +#if HAVE(ASC_AUTH_UI) && PLATFORM(IOS) I think it will be better to modify the conditions of enabling HAVE_ASC_AUTH_UI to include the PLATFORM(IOS).
Jiewen Tan
Comment 7 2021-03-25 11:03:52 PDT
Comment on attachment 424257 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=424257&action=review >> Source/WebKit/UIProcess/WebAuthentication/Cocoa/AuthenticatorPresenterCoordinator.mm:43 >> +#if HAVE(ASC_AUTH_UI) && PLATFORM(IOS) > > I think it will be better to modify the conditions of enabling HAVE_ASC_AUTH_UI to include the PLATFORM(IOS). In PlatformHave.h. Thanks for fixing this issue.
Kate Cheney
Comment 8 2021-03-25 11:08:13 PDT
Kate Cheney
Comment 9 2021-03-25 11:08:33 PDT
(In reply to Jiewen Tan from comment #6) > Comment on attachment 424257 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=424257&action=review > > > Source/WebKit/UIProcess/WebAuthentication/Cocoa/AuthenticatorPresenterCoordinator.mm:43 > > +#if HAVE(ASC_AUTH_UI) && PLATFORM(IOS) > > I think it will be better to modify the conditions of enabling > HAVE_ASC_AUTH_UI to include the PLATFORM(IOS). agreed! New patch posted.
Jiewen Tan
Comment 10 2021-03-25 11:25:37 PDT
Comment on attachment 424261 [details] Patch LGTM. r=me.
EWS
Comment 11 2021-03-25 14:49:38 PDT
Committed r275062: <https://commits.webkit.org/r275062> All reviewed patches have been landed. Closing bug and clearing flags on attachment 424261 [details].
Note You need to log in before you can comment on or make changes to this bug.