Some calls in AuthenticatorPresenterCoordinator::selectAssertionResponse are not yet available for mac https://bugs.webkit.org/show_bug.cgi?id=223752 <rdar://problem/75808515>

Reviewed by Jiewen Tan.

* wtf/PlatformHave.h:


Canonical link: https://commits.webkit.org/235774@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275062 268f45cc-cd09-0410-ab3c-d52691b4dbfc